--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="position-fixed top-0">
+        <div class="container">
+            <div class="row">
+                <div class="col d-flex align-items-center">
+                    <a href="#">
+                        <h3 class="text-white text-uppercase">START BOOTSTRAP</h3>
+                    </a>
+                </div>
+                <div class="col-auto d-flex align-items-center">
+                    <a href="#">
+                        <span class="text-uppercase">portfolio</span>
+                    </a>
+                    <a href="#">
+                        <span class="text-uppercase ps-4">about</span>
+                    </a>
+                    <a href="#">
+                        <span class="text-uppercase ps-4">contact</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
