--- a/index.html
+++ b/index.html
@@ -33,7 +33,32 @@
         </div>
     </header>
     <main>
-
+        <section class="banner">
+            <div class="row flex-column">
+                <div class="col d-flex justify-content-center pb-3">
+                    <div class="img rounded-circle"></div>
+                </div>
+                <div class="col d-flex justify-content-center pb-3">
+                    <h2 class="text-uppercase text-white">start bootstrap</h2>
+                </div>
+                <div class="col d-flex justify-content-center pb-3">
+                    <p class="text-white">
+                        ____________________♥____________________
+                    </p>
+                </div>
+                <div class="col d-flex justify-content-center pb-5 mb-3">
+                    <a href="#">
+                        <h3 class="text-uppercase text-white">graphic artist</h3>    
+                    </a>
+                    <a href="#">
+                        <h3 class="text-uppercase text-white px-2">- web designer -</h3>    
+                    </a>
+                    <a href="#">
+                        <h3 class="text-uppercase text-white">illustrator</h3>    
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
