portfolio done responsive

--- a/index.html
+++ b/index.html
@@ -34,28 +34,67 @@
     </header>
     <main>
         <section class="banner">
-            <div class="row flex-column">
-                <div class="col d-flex justify-content-center pb-3">
-                    <div class="img rounded-circle"></div>
+            <div class="container py-5">
+                <div class="row flex-column">
+                    <div class="col d-flex justify-content-center pb-3">
+                        <div class="img rounded-circle"></div>
+                    </div>
+                    <div class="col d-flex justify-content-center pb-3">
+                        <h2 class="text-uppercase text-white">start bootstrap</h2>
+                    </div>
+                    <div class="col d-flex justify-content-center pb-3">
+                        <p class="text-white">
+                            ____________________♥____________________
+                        </p>
+                    </div>
+                    <div class="col d-flex justify-content-center pb-3">
+                        <a href="#">
+                            <p class="text-uppercase text-white">graphic artist</p>    
+                        </a>
+                        <a href="#">
+                            <p class="text-uppercase text-white px-2">- web designer -</p>    
+                        </a>
+                        <a href="#">
+                            <p class="text-uppercase text-white">illustrator</p>    
+                        </a>
+                    </div>
                 </div>
-                <div class="col d-flex justify-content-center pb-3">
-                    <h2 class="text-uppercase text-white">start bootstrap</h2>
-                </div>
-                <div class="col d-flex justify-content-center pb-3">
-                    <p class="text-white">
-                        ____________________♥____________________
-                    </p>
-                </div>
-                <div class="col d-flex justify-content-center pb-5 mb-3">
-                    <a href="#">
-                        <h3 class="text-uppercase text-white">graphic artist</h3>    
-                    </a>
-                    <a href="#">
-                        <h3 class="text-uppercase text-white px-2">- web designer -</h3>    
-                    </a>
-                    <a href="#">
-                        <h3 class="text-uppercase text-white">illustrator</h3>    
-                    </a>
+            </div>
+        </section>
+        <section class="portfolio">
+            <div class="container py-5">
+                <div class="row flex-column align-items-center">
+                    <!-- <div class="col d-flex justify-content-center pb-3">
+                        <div class="img rounded-circle"></div>
+                    </div> -->
+                    <div class="col-xs-12 d-flex justify-content-center pb-3">
+                        <h2 class="text-uppercase">portfolio</h2>
+                    </div>
+                    <div class="col-xs-12 d-flex justify-content-center pb-3">
+                        <p>
+                            ____________________♥____________________
+                        </p>
+                    </div>
+                    <div class="row flex-wrap justify-content-center">
+                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                            <div class="portfolio__image--content rounded-circle"></div>
+                        </div>
+                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                            <div class="portfolio__image--content rounded-circle"></div>
+                        </div>
+                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                            <div class="portfolio__image--content rounded-circle"></div>
+                        </div>
+                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                            <div class="portfolio__image--content rounded-circle"></div>
+                        </div>
+                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                            <div class="portfolio__image--content rounded-circle"></div>
+                        </div>
+                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                            <div class="portfolio__image--content rounded-circle"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
