--- a/index.html
+++ b/index.html
@@ -98,6 +98,31 @@
                 </div>
             </div>
         </section>
+        <section class="about">
+            <div class="container py-5">
+                <div class="row flex-column">
+                    <div class="col d-flex justify-content-center pb-3">
+                        <h2 class="text-uppercase text-white">About</h2>
+                    </div>
+                    <div class="col d-flex justify-content-center pb-3">
+                        <p class="text-white">
+                            ________♥________
+                        </p>
+                    </div>
+                    <div class="row flex--wrap justify-content-center">
+                        <div class="m-3 col-xs-8 col-sm-5">
+                            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
+                        </div>
+                        <div class="m-3 col-xs-8 col-sm-5">
+                            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
+                        </div>
+                        <div class="col-xs-12 d-flex justify-content-center" > 
+                            <button class="about__button--color border rounded-3 text-white">Download</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
