--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <main>
-        <section class="banner">
+        <section id="banner">
             <div class="container py-5">
                 <div class="row flex-column">
                     <div class="col d-flex justify-content-center pb-3">
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio">
+        <section id="portfolio">
             <div class="container py-5">
                 <div class="row flex-column align-items-center">
                     <!-- <div class="col d-flex justify-content-center pb-3">
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id="about">
             <div class="container py-5">
                 <div class="row flex-column">
                     <div class="col d-flex justify-content-center pb-3">
@@ -119,6 +119,25 @@
                         <div class="col-xs-12 d-flex justify-content-center" > 
                             <button class="about__button--color border rounded-3 text-white">Download</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact-me">
+            <div class="container py-5">
+                <div class="row flex-column">
+                    <div class="col d-flex justify-content-center pb-3">
+                        <h2 class="text-uppercase">contact me</h2>
+                    </div>
+                    <div class="col d-flex justify-content-center pb-3">
+                        <p>
+                            ____________________♥____________________
+                        </p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-10" > 
+                        ciao
                     </div>
                 </div>
             </div>
