--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -67,31 +68,31 @@
                     <!-- <div class="col d-flex justify-content-center pb-3">
                         <div class="img rounded-circle"></div>
                     </div> -->
-                    <div class="col-xs-12 d-flex justify-content-center pb-3">
+                    <div class="col-12 d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase">portfolio</h2>
                     </div>
-                    <div class="col-xs-12 d-flex justify-content-center pb-3">
+                    <div class="col-12 d-flex justify-content-center pb-3">
                         <p>
                             ____________________♥____________________
                         </p>
                     </div>
                     <div class="row flex-wrap justify-content-center">
-                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
                             <div class="portfolio__image--content rounded-circle"></div>
                         </div>
-                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
                             <div class="portfolio__image--content rounded-circle"></div>
                         </div>
-                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
                             <div class="portfolio__image--content rounded-circle"></div>
                         </div>
-                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
                             <div class="portfolio__image--content rounded-circle"></div>
                         </div>
-                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
                             <div class="portfolio__image--content rounded-circle"></div>
                         </div>
-                        <div class="m-3 portfolio__image col-xs-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
+                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
                             <div class="portfolio__image--content rounded-circle"></div>
                         </div>
                     </div>
@@ -110,14 +111,14 @@
                         </p>
                     </div>
                     <div class="row flex--wrap justify-content-center">
-                        <div class="m-3 col-xs-8 col-sm-5">
+                        <div class="m-3 col-8 col-sm-5">
                             <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
                         </div>
-                        <div class="m-3 col-xs-8 col-sm-5">
+                        <div class="m-3 col-8 col-sm-5">
                             <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
                         </div>
-                        <div class="col-xs-12 d-flex justify-content-center" > 
-                            <button class="about__button--color border rounded-3 text-white">Download</button>
+                        <div class="col-12 d-flex justify-content-center" > 
+                            <button class="about__button--color px-3 py-1 border rounded-3 text-white">Download</button>
                         </div>
                     </div>
                 </div>
@@ -125,7 +126,7 @@
         </section>
         <section id="contact-me">
             <div class="container py-5">
-                <div class="row flex-column">
+                <div class="row m-3 flex-column">
                     <div class="col d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase">contact me</h2>
                     </div>
@@ -135,14 +136,42 @@
                         </p>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-xs-10" > 
-                        ciao
+                <div class="row m-3 justify-content-center">
+                    <div class="col-10 col-md-8 col-xl-6" > 
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda in, odit suscipit ullam dignissimos aliquid, eveniet quasi natus veritatis nam iste sit delectus laudantium obcaecati voluptatum ducimus laborum? Sit, ipsum.
+                        <div class="my-3" > 
+                            <button class="contact-me__button--color px-3 py-1 border rounded-3 text-white">Send</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <section class="py-3 border-none" id="top__footer">
+            <div class="container">
+                <div class="row flex--wrap justify-content-between">
+                    <div class="col-12 col-md-3 py-3 col-md-4">
+                        <h3 class="text-white text-center">LOCATION</h3>
+                        <P class="text-white text-center">2215 John Daniel Drive Clark, MO 54243</P>
+                    </div>
+                    <div class="col-12 col-md-3 py-3 col-md-4">
+                        <h3 class="text-white text-center">LOCATION</h3>
+                        <P class="text-white text-center">2215 John Daniel Drive Clark, MO 54243</P>
+                    </div>
+                    <div class="col-12 col-md-3 py-3 col-md-4">
+                        <h3 class="text-white text-center">LOCATION</h3>
+                        <P class="text-white text-center">2215 John Daniel Drive Clark, MO 54243</P>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-5" id="bot__footer">
+            <div class="d-flex justify-content-center align-items-center">
+                <p class="text-white">Copyright <i class="far fa-copyright"></i> your website 2019</p>
+            </div>
+        </section>
+    </footer>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
