fixed header banner and portfolio

--- a/index.html
+++ b/index.html
@@ -34,30 +34,28 @@
         </div>
     </header>
     <main>
-        <section id="banner">
-            <div class="container py-5">
-                <div class="row flex-column">
-                    <div class="col d-flex justify-content-center pb-3">
-                        <div class="img rounded-circle"></div>
-                    </div>
-                    <div class="col d-flex justify-content-center pb-3">
-                        <h2 class="text-uppercase text-white">start bootstrap</h2>
-                    </div>
-                    <div class="col d-flex justify-content-center pb-3">
-                        <p class="text-white">
-                            ____________________♥____________________
-                        </p>
-                    </div>
-                    <div class="col d-flex justify-content-center pb-3">
-                        <a href="#">
-                            <p class="text-uppercase text-white">graphic artist</p>    
-                        </a>
-                        <a href="#">
-                            <p class="text-uppercase text-white px-2">- web designer -</p>    
-                        </a>
-                        <a href="#">
-                            <p class="text-uppercase text-white">illustrator</p>    
-                        </a>
+        <section id="banner" class="mt-5">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col d-flex flex-column align-items-center pb-3">
+                        <img class="pb-3 img" src="img/avatar.svg" alt="avatar icon">
+                        <h2 class="text-uppercase text-white pb-3">start bootstrap</h2>
+                        <div class="separator__star d-flex pb-3">
+                            <span class="text-white separator__star--line"></span><i class="fas fa-star text-white"></i><span class="text-white separator__star--line"></span>
+                        </div>
+                        <div class="banner__link d-flex justify-content-center">
+                            <a href="#">
+                                <p class="text-uppercase text-white">graphic artist</p>    
+                            </a>
+                            <div class="banner__link--spacing px-2"></div>
+                            <a href="#">
+                                <p class="text-uppercase text-white">web designer</p>    
+                            </a>
+                            <div class="banner__link--spacing px-2"></div>
+                            <a href="#">
+                                <p class="text-uppercase text-white">illustrator</p>    
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -65,35 +63,54 @@
         <section id="portfolio">
             <div class="container py-5">
                 <div class="row flex-column align-items-center">
-                    <!-- <div class="col d-flex justify-content-center pb-3">
-                        <div class="img rounded-circle"></div>
-                    </div> -->
                     <div class="col-12 d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase">portfolio</h2>
                     </div>
-                    <div class="col-12 d-flex justify-content-center pb-3">
-                        <p>
-                            ____________________♥____________________
-                        </p>
+                    <div class="separator__star d-flex pb-3">
+                        <span class="separator__star--line"></span><i class="fas fa-star"></i><span class="separator__star--line"></span>
                     </div>
-                    <div class="row flex-wrap justify-content-center">
-                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
-                            <div class="portfolio__image--content rounded-circle"></div>
+                    <div class="row flex-wrap">
+                        <div class="p-2 col-12 col-sm-6 col-xl-4">
+                            <a href="#">
+                                <div class="portfolio__image rounded-3">
+                                    <img class="portfolio__image--content" src="img/cabin.png" alt="cabin img">
+                                </div>
+                            </a>
                         </div>
-                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
-                            <div class="portfolio__image--content rounded-circle"></div>
+                        <div class="p-2 col-12 col-sm-6 col-xl-4">
+                            <a href="#">
+                                <div class="portfolio__image rounded-3">
+                                    <img class="portfolio__image--content" src="img/cake.png" alt="cake img">
+                                </div>
+                            </a>
                         </div>
-                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
-                            <div class="portfolio__image--content rounded-circle"></div>
+                        <div class="p-2 col-12 col-sm-6 col-xl-4">
+                            <a href="#">
+                                <div class="portfolio__image rounded-3">
+                                    <img class="portfolio__image--content" src="img/circus.png" alt="circus img">
+                                </div>
+                            </a>
                         </div>
-                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
-                            <div class="portfolio__image--content rounded-circle"></div>
+                        <div class="p-2 col-12 col-sm-6 col-xl-4">
+                            <a href="#">
+                                <div class="portfolio__image rounded-3">
+                                    <img class="portfolio__image--content" src="img/game.png" alt="game img">
+                                </div>
+                            </a>
                         </div>
-                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
-                            <div class="portfolio__image--content rounded-circle"></div>
+                        <div class="p-2 col-12 col-sm-6 col-xl-4">
+                            <a href="#">
+                                <div class="portfolio__image rounded-3">
+                                    <img class="portfolio__image--content" src="img/safe.png" alt="safe img">
+                                </div>
+                            </a>
                         </div>
-                        <div class="m-3 portfolio__image col-12 col-sm-5 col-xl-3 border rounded-3 d-flex justify-content-center align-items-center">
-                            <div class="portfolio__image--content rounded-circle"></div>
+                        <div class="p-2 col-12 col-sm-6 col-xl-4">
+                            <a href="#">
+                                <div class="portfolio__image rounded-3">
+                                    <img class="portfolio__image--content" src="img/submarine.png" alt="submarine img">
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -105,10 +122,8 @@
                     <div class="col d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase text-white">About</h2>
                     </div>
-                    <div class="col d-flex justify-content-center pb-3">
-                        <p class="text-white">
-                            ________♥________
-                        </p>
+                    <div class="separator__star d-flex pb-3">
+                        <span class="separator__star--line text-white"></span><i class="fas fa-star text-white"></i><span class="separator__star--line text-white"></span>
                     </div>
                     <div class="row flex--wrap justify-content-center">
                         <div class="m-3 col-8 col-sm-5">
@@ -130,15 +145,19 @@
                     <div class="col d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase">contact me</h2>
                     </div>
-                    <div class="col d-flex justify-content-center pb-3">
-                        <p>
-                            ____________________♥____________________
-                        </p>
+                    <div class="separator__star d-flex pb-3">
+                        <span class="separator__star--line"></span><i class="fas fa-star"></i><span class="separator__star--line"></span>
                     </div>
                 </div>
                 <div class="row m-3 justify-content-center">
-                    <div class="col-10 col-md-8 col-xl-6" > 
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda in, odit suscipit ullam dignissimos aliquid, eveniet quasi natus veritatis nam iste sit delectus laudantium obcaecati voluptatum ducimus laborum? Sit, ipsum.
+                    <div class="col-10 col-md-8 col-xl-6" >
+                        <div class="row">
+                            <div class="container">
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" class="input-text" id="name" placeholder="" value="" required="">
+                            </div>
+                        </div>
+                        
                         <div class="my-3" > 
                             <button class="contact-me__button--color px-3 py-1 border rounded-3 text-white">Send</button>
                         </div>
