--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </section>
         <section id="portfolio">
-            <div class="container py-5">
+            <div class="container">
                 <div class="row flex-column align-items-center">
                     <div class="col-12 d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase">portfolio</h2>
@@ -117,34 +117,38 @@
             </div>
         </section>
         <section id="about">
-            <div class="container py-5">
-                <div class="row flex-column">
+            <div class="container">
+                <div class="row">
                     <div class="col d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase text-white">About</h2>
                     </div>
+                </div>
+                <div class="row">
                     <div class="separator__star d-flex pb-3">
                         <span class="separator__star--line text-white"></span><i class="fas fa-star text-white"></i><span class="separator__star--line text-white"></span>
                     </div>
-                    <div class="row flex--wrap justify-content-center">
-                        <div class="m-3 col-8 col-sm-5">
-                            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
-                        </div>
-                        <div class="m-3 col-8 col-sm-5">
-                            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
-                        </div>
-                        <div class="col-12 d-flex justify-content-center" > 
-                            <button class="about__button--color px-3 py-1 border rounded-3 text-white">Download</button>
-                        </div>
+                </div>
+                <div class="row flex--wrap justify-content-center">
+                    <div class="col-8 col-sm-5">
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
+                    </div>
+                    <div class="col-8 col-sm-5">
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center" > 
+                        <button class="about__button--color px-3 py-1 border rounded-3 text-white"><i class="fas fa-download"></i> Download</button>
                     </div>
                 </div>
             </div>
         </section>
         <section id="contact-me">
-            <div class="container py-5">
-                <div class="row m-3 flex-column">
+            <div class="container">
+                <div class="row m-3">
                     <div class="col d-flex justify-content-center pb-3">
                         <h2 class="text-uppercase">contact me</h2>
                     </div>
+                </div>
+                <div class="row">
                     <div class="separator__star d-flex pb-3">
                         <span class="separator__star--line"></span><i class="fas fa-star"></i><span class="separator__star--line"></span>
                     </div>
@@ -156,8 +160,7 @@
                                 <label for="name" class="form-label">Name</label>
                                 <input type="text" class="input-text" id="name" placeholder="" value="" required="">
                             </div>
-                        </div>
-                        
+                        </div>  
                         <div class="my-3" > 
                             <button class="contact-me__button--color px-3 py-1 border rounded-3 text-white">Send</button>
                         </div>
