--- a/index.html
+++ b/index.html
@@ -12,26 +12,35 @@
 </head>
 <body>
     <header class="position-fixed top-0">
-        <div class="container">
-            <div class="row">
-                <div class="col d-flex align-items-center">
-                    <a href="#">
-                        <h3 class="text-white text-uppercase">START BOOTSTRAP</h3>
-                    </a>
-                </div>
-                <div class="col-auto d-flex align-items-center">
+        <nav class="navbar navbar-dark navbar-expand-sm navbar-light">
+            <div class="container">
+            <a href="#">
+                <h3 class="text-white text-uppercase">START BOOTSTRAP</h3>
+            </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
                     <a href="#">
                         <span class="text-uppercase">portfolio</span>
                     </a>
+                    </li>
+                    <li class="nav-item">
                     <a href="#">
                         <span class="text-uppercase ps-4">about</span>
                     </a>
+                    </li>
+                    <li class="nav-item">
                     <a href="#">
                         <span class="text-uppercase ps-4">contact</span>
                     </a>
+                    </li>
+                </ul>
                 </div>
             </div>
-        </div>
+            </nav>
     </header>
     <main>
         <section id="banner" class="mt-5">
