footer done to cplete overlay

--- a/index.html
+++ b/index.html
@@ -192,17 +192,30 @@
         <section class="py-3 border-none" id="top__footer">
             <div class="container">
                 <div class="row flex--wrap justify-content-between">
-                    <div class="col-12 col-md-3 py-3 col-md-4">
+                    <div class="col-12 col-md-4 py-3 px-1">
                         <h3 class="text-white text-center">LOCATION</h3>
                         <P class="text-white text-center">2215 John Daniel Drive Clark, MO 54243</P>
                     </div>
-                    <div class="col-12 col-md-3 py-3 col-md-4">
-                        <h3 class="text-white text-center">LOCATION</h3>
-                        <P class="text-white text-center">2215 John Daniel Drive Clark, MO 54243</P>
+                    <div class="col-12 col-md-4 py-3 px-1">
+                        <h3 class="text-white text-center">AROUND THE WEB</h3>
+                        <ul class="d-flex justify-content-center">
+                            <li class="px-2">
+                                <a class="footer__button--social text-white" href="#"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li class="px-2">
+                                <a class="footer__button--social text-white" href="#"><i class="fab fa-google-plus-g"></i></a>
+                            </li>
+                            <li class="px-2">
+                                <a class="footer__button--social text-white" href="#"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li class="px-2">
+                                <a class="footer__button--social text-white" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="col-12 col-md-3 py-3 col-md-4">
-                        <h3 class="text-white text-center">LOCATION</h3>
-                        <P class="text-white text-center">2215 John Daniel Drive Clark, MO 54243</P>
+                    <div class="col-12 col-md-4 py-3 px-1">
+                        <h3 class="text-white text-center">ABOUT FREELANCER</h3>
+                        <P class="text-white text-center">Freelance is a free to use, open source Bootstrap theme created by <a class="footer__button--link" href="#">Start Bootstrap</a></P>
                     </div>
                 </div>
             </div>
