--- a/index.html
+++ b/index.html
@@ -80,43 +80,43 @@
                     </div>
                     <div class="row flex-wrap">
                         <div class="p-2 col-12 col-sm-6 col-xl-4">
-                            <a href="#">
-                                <div class="portfolio__image rounded-3">
+                            <a href="#"></a>
+                                <div class="portfolio__image position-relative overlay rounded-3">
                                     <img class="portfolio__image--content" src="img/cabin.png" alt="cabin img">
                                 </div>
                             </a>
                         </div>
                         <div class="p-2 col-12 col-sm-6 col-xl-4">
                             <a href="#">
-                                <div class="portfolio__image rounded-3">
+                                <div class="portfolio__image position-relative overlay rounded-3">
                                     <img class="portfolio__image--content" src="img/cake.png" alt="cake img">
                                 </div>
                             </a>
                         </div>
                         <div class="p-2 col-12 col-sm-6 col-xl-4">
                             <a href="#">
-                                <div class="portfolio__image rounded-3">
+                                <div class="portfolio__image position-relative overlay rounded-3">
                                     <img class="portfolio__image--content" src="img/circus.png" alt="circus img">
                                 </div>
                             </a>
                         </div>
                         <div class="p-2 col-12 col-sm-6 col-xl-4">
                             <a href="#">
-                                <div class="portfolio__image rounded-3">
+                                <div class="portfolio__image position-relative overlay rounded-3">
                                     <img class="portfolio__image--content" src="img/game.png" alt="game img">
                                 </div>
                             </a>
                         </div>
                         <div class="p-2 col-12 col-sm-6 col-xl-4">
                             <a href="#">
-                                <div class="portfolio__image rounded-3">
+                                <div class="portfolio__image position-relative overlay rounded-3">
                                     <img class="portfolio__image--content" src="img/safe.png" alt="safe img">
                                 </div>
                             </a>
                         </div>
                         <div class="p-2 col-12 col-sm-6 col-xl-4">
                             <a href="#">
-                                <div class="portfolio__image rounded-3">
+                                <div class="portfolio__image position-relative overlay rounded-3">
                                     <img class="portfolio__image--content" src="img/submarine.png" alt="submarine img">
                                 </div>
                             </a>
@@ -139,10 +139,10 @@
                 </div>
                 <div class="row flex--wrap justify-content-center">
                     <div class="col-8 col-sm-5">
-                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
+                        <p class="text-white">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes te complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                     </div>
                     <div class="col-8 col-sm-5">
-                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia rerum nesciunt quidem placeat officia amet vero eligendi, consequuntur deleniti quia repudiandae hic illo tempora ratione! Perspiciatis, necessitatibus. Odio, suscipit placeat.</p>
+                        <p class="text-white">Whethe you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
                     <div class="col-12 d-flex justify-content-center" > 
                         <button class="about__button--color px-3 py-1 border rounded-3 text-white"><i class="fas fa-download"></i> Download</button>
