--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                     <a href="#">
-                        <span class="text-uppercase">portfolio</span>
+                        <span class="text-uppercase text-white">portfolio</span>
                     </a>
                     </li>
                     <li class="nav-item">
                     <a href="#">
-                        <span class="text-uppercase ps-4">about</span>
+                        <span class="text-uppercase text-white ps-4">about</span>
                     </a>
                     </li>
                     <li class="nav-item">
                     <a href="#">
-                        <span class="text-uppercase ps-4">contact</span>
+                        <span class="text-uppercase text-white ps-4">contact</span>
                     </a>
                     </li>
                 </ul>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="row flex-wrap">
                         <div class="p-2 col-12 col-sm-6 col-xl-4">
-                            <a href="#"></a>
+                            <a href="#">
                                 <div class="portfolio__image position-relative overlay rounded-3">
                                     <img class="portfolio__image--content" src="img/cabin.png" alt="cabin img">
                                 </div>
@@ -222,7 +222,7 @@
         </section>
         <section class="py-5" id="bot__footer">
             <div class="d-flex justify-content-center align-items-center">
-                <p class="text-white">Copyright <i class="far fa-copyright"></i> your website 2019</p>
+                <h6 class="text-white">Copyright <i class="far fa-copyright"></i> your website 2019</h6>
             </div>
         </section>
     </footer>
