--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav ms-auto">
+                <div class="collapse navbar-collapse justify-content-end text-end" id="navbarText">
+                <ul class="navbar-nav xs-auto">
                     <li class="nav-item">
                     <a href="#">
                         <span class="text-uppercase text-white">portfolio</span>
